Fix(Header): Prevent it from being hidden by body

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -7,6 +7,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
 
   display: flex;
   flex-direction: column;
